feat: support broad Bilibili resource downloads
